[gd_scene load_steps=5 format=3 uid="uid://ccpyl1fknrevd"]

[ext_resource type="Script" uid="uid://dr36aqn8pac4s" path="res://Scripts/player.gd" id="1_cvnsp"]
[ext_resource type="Texture2D" uid="uid://biqum366jbhg0" path="res://Assets/Santa.png" id="2_cvnsp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cvnsp"]
size = Vector2(12, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6t5aa"]
size = Vector2(12, 12)

[node name="Player" type="CharacterBody2D"]
collision_mask = 0
motion_mode = 1
script = ExtResource("1_cvnsp")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("2_cvnsp")
region_enabled = true
region_rect = Rect2(0, 0, 32, 32)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_cvnsp")

[node name="RayUp" type="RayCast2D" parent="."]
target_position = Vector2(0, -16)
collision_mask = 2
collide_with_areas = true

[node name="RayDown" type="RayCast2D" parent="."]
target_position = Vector2(0, 16)
collision_mask = 2
collide_with_areas = true

[node name="RayLeft" type="RayCast2D" parent="."]
target_position = Vector2(-16, 0)
collision_mask = 2
collide_with_areas = true

[node name="RayRight" type="RayCast2D" parent="."]
target_position = Vector2(16, 0)
collision_mask = 2
collide_with_areas = true

[node name="GiftCollider" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="GiftCollider"]
shape = SubResource("RectangleShape2D_6t5aa")

[connection signal="area_entered" from="GiftCollider" to="." method="_on_gift_collider_area_entered"]
[connection signal="area_exited" from="GiftCollider" to="." method="_on_gift_collider_area_exited"]
